--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "python-telegram-bot>=22.5",
     "pytz>=2025.2",
+    "pyyaml>=6.0.3",
     "ruff>=0.14.4",
     "xlsxwriter>=3.2.9",
 ]
