--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "environs[django]>=14.5.0",
     "google-auth>=2.43.0",
     "gspread>=6.2.1",
+    "openpyxl>=3.1.5",
     "polars>=1.35.2",
     "pydantic-settings>=2.11.0",
     "python-telegram-bot>=22.5",
@@ -19,4 +20,6 @@ dependencies = [
     "pyyaml>=6.0.3",
     "ruff>=0.14.4",
     "xlsxwriter>=3.2.9",
+    "gunicorn>=21.2.0",
+    "uvicorn[standard]>=0.30.0",
 ]
