--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -15,6 +15,11 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   web:
     build: .
@@ -34,6 +39,11 @@ services:
       - static_volume:/app/static
       - media_volume:/app/media
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   scheduler:
     build: .
