--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,5 @@ dependencies = [
     "xlsxwriter>=3.2.9",
     "gunicorn>=21.2.0",
     "uvicorn[standard]>=0.30.0",
+    "psycopg2-binary>=2.9.11",
 ]
