--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,32 +1,8 @@
-version: "3.9"
-
 services:
-
-  postgres:
-    image: postgres:15
-    container_name: postgres_local
-    env_file: .env
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - pgdata_local:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   web:
     build: .
     container_name: nextbot_local
     env_file: .env
-    depends_on:
-      - postgres
     command: >
       gunicorn nextbot.asgi:application
       -k uvicorn.workers.UvicornWorker
@@ -38,6 +14,8 @@ services:
     volumes:
       - static_volume:/app/static
       - media_volume:/app/media
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
@@ -45,22 +23,43 @@ services:
       timeout: 10s
       retries: 3
 
+  bot:
+    build: .
+    container_name: telegram_bot_local
+    env_file: .env
+    depends_on:
+      web:
+        condition: service_healthy
+    command: python manage.py runbot
+    restart: unless-stopped
+    volumes:
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets
+
   scheduler:
     build: .
     container_name: scheduler_local
     env_file: .env
     depends_on:
-      - web
-    entrypoint: ["/bin/sh", "-c"]
+      web:
+        condition: service_healthy
     command: >
+      /bin/sh -c "
+      echo 'Scheduler starting...';
       while true; do
-        echo "[Scheduler] running sync...";
+        echo '[Scheduler] Running sync...';
         python manage.py sync_cars_with_element;
-        sleep $(( ${SYNC_CARS_SCHEDULE_MINUTES:-5} * 60 ));
-      done;
+        echo '[Scheduler] Sleeping for 5 minutes...';
+        sleep 300;
+      done
+      "
     restart: unless-stopped
+    volumes:
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets
 
 volumes:
-  pgdata_local:
   static_volume:
   media_volume:
+  logs:
+  local_secrets:
