--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,7 +25,7 @@ services:
     labels:
       - "traefik.enable=true"
       # Всё API (не статики) идёт в Gunicorn
-      - "traefik.http.routers.nextbot_app.rule=Host(`${DOMAIN}`) && PathPrefix(`/api`, `/admin`, `/auth`, `/health`)"
+      - "traefik.http.routers.nextbot_app.rule=Host(`${DOMAIN}`)"
       - "traefik.http.routers.nextbot_app.entrypoints=websecure"
       - "traefik.http.routers.nextbot_app.tls.certresolver=myresolver"
       - "traefik.http.services.nextbot_app.loadbalancer.server.port=8000"
@@ -53,8 +53,7 @@ services:
 
     labels:
       - "traefik.enable=true"
-      # Статика и медиа идут через nginx, а не через Django
-      - "traefik.http.routers.nextbot_static.rule=Host(`${DOMAIN}`)"
+      - "traefik.http.routers.nextbot_static.rule=Host(`${DOMAIN}`) && (PathPrefix(`/static`) || PathPrefix(`/media`))"
       - "traefik.http.routers.nextbot_static.entrypoints=websecure"
       - "traefik.http.routers.nextbot_static.tls.certresolver=myresolver"
       - "traefik.http.services.nextbot_static.loadbalancer.server.port=80"
