--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,70 +1,46 @@
 services:
 
   web:
-    build: .
-    container_name: nextbot_local
-    env_file: .env
-    
-    command: >
-      gunicorn nextbot.asgi:application
-      -k uvicorn.workers.UvicornWorker
-      --bind 0.0.0.0:8000
-      --workers 4
-      --log-level info
-
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.dev
+    container_name: nextbot_web_dev
+    env_file: .env.dev
     ports:
       - "8000:8000"
-
     volumes:
+      - .:/app
       - static_volume:/app/static
       - media_volume:/app/media
-      - ./logs:/app/logs
-      - ./local_secrets:/app/local_secrets
-    restart: unless-stopped
-
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  bot:
-    build: .
-    container_name: telegram_bot_local
-    env_file: .env
     depends_on:
-      web:
-        condition: service_healthy
-    command: python manage.py runbot
-    restart: unless-stopped
-    volumes:
-      - ./logs:/app/logs
-      - ./local_secrets:/app/local_secrets
+      - db
 
-  scheduler:
-    build: .
-    container_name: scheduler_local
-    env_file: .env
-    depends_on:
-      web:
-        condition: service_healthy
-    command: >
-      /bin/sh -c "
-      echo 'Scheduler starting...';
-      while true; do
-        echo '[Scheduler] Running sync...';
-        python manage.py sync_cars_with_element;
-        echo '[Scheduler] Sleeping for 5 minutes...';
-        sleep 300;
-      done
-      "
+  db:
+    image: postgres:15
+    container_name: nextbot_db_dev
     restart: unless-stopped
+    env_file: .env.dev
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
     volumes:
-      - ./logs:/app/logs
-      - ./local_secrets:/app/local_secrets
+      - pgdata_dev:/var/lib/postgresql/data
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: nextbot_pgadmin_dev
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
 
 volumes:
+  pgdata_dev:
   static_volume:
   media_volume:
-  logs:
-  local_secrets:
