--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,22 +1,25 @@
 server {
     listen 80;
-    server_name _;
+    server_name refuel.txnxt.ru;
+
+    # Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
     # STATIC FILES
     location /static/ {
         alias /static/;
         expires 30d;
-        add_header Cache-Control "public, max-age=2592000, immutable";
     }
 
     # MEDIA FILES
     location /media/ {
         alias /media/;
-        expires 1d;
-        add_header Cache-Control "public, max-age=86400";
+        expires 7d;
     }
 
-    # ВСЁ ОСТАЛЬНОЕ → Django (web service)
+    # Django backend
     location / {
         proxy_pass http://web:8000;
 
@@ -24,7 +27,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_redirect off;
     }
 }
