--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -1,5 +1,6 @@
 FROM python:3.12-slim
 
+# OS deps
 RUN apt-get update && apt-get install -y \
     build-essential \
     gcc \
@@ -13,17 +14,24 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
+# Install Python deps
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Create non-root user
+RUN useradd -m appuser
+
+# Copy source
 COPY . /app
 
-RUN mkdir -p /app/static /app/media /app/logs
+# Устанавливаем права на /app и подпапки
+RUN mkdir -p /app/logs /app/static /app/media && chown -R appuser:appuser /app
 
-RUN useradd -m appuser && chown -R appuser:appuser /app
+# Копируем entrypoint внутрь /app/scripts и даём права
+RUN chmod +x /app/scripts/entrypoint.prod.sh
+
+# Переключаемся на appuser
 USER appuser
 
-COPY scripts/entrypoint.prod.sh /entrypoint.sh
-RUN chmod +x /entrypoint.sh
-
-ENTRYPOINT ["/entrypoint.sh"]
+# ENTRYPOINT
+ENTRYPOINT ["/app/scripts/entrypoint.prod.sh"]
