--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -40,7 +40,44 @@ services:
     depends_on:
       - db
 
+  bot:
+    build: .
+    container_name: telegram_bot_dev
+    env_file: .env
+    depends_on:
+      web:
+        condition: service_healthy
+    command: python manage.py runbot
+    restart: unless-stopped
+    volumes:
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets
+
+  scheduler:
+    build: .
+    container_name: scheduler_dev
+    env_file: .env
+    depends_on:
+      web:
+        condition: service_healthy
+    command: >
+      /bin/sh -c "
+      echo 'Scheduler starting...';
+      while true; do
+        echo '[Scheduler] Running sync...';
+        python manage.py sync_cars_with_element;
+        echo '[Scheduler] Sleeping for 5 minutes...';
+        sleep 300;
+      done
+      "
+    restart: unless-stopped
+    volumes:
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets
+
 volumes:
-  pgdata_dev:
   static_volume:
   media_volume:
+  pgdata_dev:
+  logs:
+  local_secrets:
