--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -25,7 +25,7 @@ RUN useradd -m appuser
 COPY . /app
 
 # Устанавливаем права на /app и подпапки
-RUN mkdir -p /app/logs /app/static /app/media && chown -R appuser:appuser /app
+RUN mkdir -p /app/logs /app/local_secrets /app/static /app/media && chown -R appuser:appuser /app
 
 # Копируем entrypoint внутрь /app/scripts и даём права
 RUN chmod +x /app/scripts/entrypoint.prod.sh
