--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -41,7 +41,9 @@ services:
       - db
 
   bot:
-    build: .
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.dev
     container_name: telegram_bot_dev
     env_file: .env
     depends_on:
@@ -54,7 +56,9 @@ services:
       - ./local_secrets:/app/local_secrets
 
   scheduler:
-    build: .
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.dev
     container_name: scheduler_dev
     env_file: .env
     depends_on:
