--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,14 +6,27 @@ services:
       dockerfile: docker/Dockerfile.dev
     container_name: nextbot_web_dev
     env_file: .env.dev
+    command: >
+      gunicorn nextbot.asgi:application
+      -k uvicorn.workers.UvicornWorker
+      --bind 0.0.0.0:8000
+      --workers 4
+      --log-level info
     ports:
       - "8000:8000"
     volumes:
       - .:/app
       - static_volume:/app/static
       - media_volume:/app/media
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets
     depends_on:
       - db
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   db:
     image: postgres:15
