--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,10 +6,23 @@ services:
       dockerfile: docker/Dockerfile.prod
     container_name: nextbot_web
     env_file: .env
+    command: >
+      gunicorn nextbot.asgi:application
+      -k uvicorn.workers.UvicornWorker
+      --bind 0.0.0.0:8000
+      --workers 4
+      --log-level info
     volumes:
       - static_volume:/app/static
       - media_volume:/app/media
+      - ./logs:/app/logs
+      - ./local_secrets:/app/local_secrets  
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
     
   nginx:
     image: nginx:1.27-alpine
