--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,22 +1,45 @@
+# === HTTP SERVER: только редирект и ACME ===
 server {
     listen 80;
     server_name refuel.txnxt.ru;
 
-    # Let's Encrypt
+    # Let's Encrypt challenge
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
+
+    # Все остальные запросы — редирект на HTTPS
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+# === HTTPS SERVER: основной сайт ===
+server {
+    listen 443 ssl http2;
+    server_name refuel.txnxt.ru;
+
+    ssl_certificate /etc/letsencrypt/live/refuel.txnxt.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/refuel.txnxt.ru/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES128-GCM-SHA256;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
 
     # STATIC FILES
     location /static/ {
         alias /static/;
         expires 30d;
+        add_header Cache-Control "public, immutable";
     }
 
     # MEDIA FILES
     location /media/ {
         alias /media/;
         expires 7d;
+        add_header Cache-Control "public";
     }
 
     # Django backend
@@ -27,5 +50,15 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Port 443;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_buffering off;
+        proxy_request_buffering off;
+        proxy_read_timeout 300s;
+        proxy_send_timeout 300s;
     }
 }
