--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -53,6 +53,8 @@ services:
       dockerfile: docker/Dockerfile.prod
     container_name: telegram_bot_prod
     env_file: .env
+    environment:
+      DJANGO_SETTINGS_MODULE: nextbot.settings.prod
     depends_on:
       web:
         condition: service_healthy
@@ -68,6 +70,8 @@ services:
       dockerfile: docker/Dockerfile.prod
     container_name: scheduler_prod
     env_file: .env
+    environment:
+      DJANGO_SETTINGS_MODULE: nextbot.settings.prod    
     depends_on:
       web:
         condition: service_healthy
