--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,8 +15,9 @@ services:
     volumes:
       - static_volume:/app/static
       - media_volume:/app/media
-      - ./logs:/app/logs
-      - ./local_secrets:/app/local_secrets  
+      - ./logs:/app/logs:rw
+      - ./local_secrets:/app/local_secrets:rw
+    user: "1000:1000" # UID:GID appuser  
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health/"]
@@ -61,8 +62,9 @@ services:
     command: python manage.py runbot
     restart: unless-stopped
     volumes:
-      - ./logs:/app/logs
-      - ./local_secrets:/app/local_secrets
+      - ./logs:/app/logs:rw
+      - ./local_secrets:/app/local_secrets:rw
+    user: "1000:1000"
 
   scheduler:
     build:
@@ -87,8 +89,9 @@ services:
       "
     restart: unless-stopped
     volumes:
-      - ./logs:/app/logs
-      - ./local_secrets:/app/local_secrets
+      - ./logs:/app/logs:rw
+      - ./local_secrets:/app/local_secrets:rw
+    user: "1000:1000"
 
 volumes:
   static_volume:
