--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ python-telegram-bot>=22.5
 pytz>=2025.2
 pyyaml>=6.0.3
 xlsxwriter>=3.2.9
+django-phonenumber-field[phonenumberslite]>=8.3.0
+redis>=7.1.0
 
 # production server
 gunicorn>=21.2.0
